--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "techtatva",
   "version": "0.1.0",
+  "homepage": "http://akshatmittal61.github.io/techtatva",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -18,6 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "sass": "node-sass public/sass/main.scss src/style.css -w"
   },
   "eslintConfig": {
